added contact, cgu, et presentation

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,4 +11,5 @@
 <div class="content mat-app-background darkMode">
   <h1> Hello There </h1>
 </div>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
