--- a/frontend/src/app/common/footer/footer.component.html
+++ b/frontend/src/app/common/footer/footer.component.html
@@ -1,4 +1,7 @@
 <mat-toolbar color="accent">
     <mat-toolbar-row>
-      <span>Custom Toolbar</span>
-</mat-toolbar-row>
+      <a mat-flat-button routerLink="/presentation">Présentation du site</a>
+      <a mat-flat-button routerLink="/contacts">Contacts</a>
+      <a mat-flat-button routerLink="/cgu">CGU</a>
+    </mat-toolbar-row>
+</mat-toolbar>
