--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -9,6 +9,7 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 @import "app/common/footer/footer.component";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 @mixin custom-components-theme($theme) {
   @include sidenav-theme($theme);
