added connexion/deconexion, 404, jwtInterceptor

--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -9,7 +9,7 @@
 
     <!-- if not connected -->
     <span *ngIf="!isConnected; else elseBlock">
-        <button mat-fab extended color="primary">
+        <button mat-fab extended color="primary" routerLink="/connexion">
             <mat-icon>person</mat-icon>
                 Connexion
         </button>
@@ -39,7 +39,7 @@
             </button>
         </span>
     
-        <button mat-fab extended color="primary">
+        <button (click)="disconnect()" mat-fab extended color="primary">
             <mat-icon>input</mat-icon>
                 Déconnexion
         </button>
