--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -13,7 +13,7 @@
             <mat-icon>person</mat-icon>
                 Connexion
         </button>
-        <button mat-fab extended color="primary">
+        <button mat-fab extended color="primary" routerLink="/inscription">
             <mat-icon>person_add</mat-icon>
                 Inscription
         </button> 
