--- a/frontend/src/app/common/header/header.component.scss
+++ b/frontend/src/app/common/header/header.component.scss
@@ -1,9 +1,10 @@
 .spacer {
-    flex : 1 1 auto;
+    flex: 1 1 auto;
 }
 
 .red{
-    color : red;
+    color: red;
+    font-weight: bold;
 }
 
 button{
