--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="accent">
-    <h3 class="red">{{title}}</h3>
+    <div class="red">{{title}}</div>
     <span class="spacer"></span>
     <!-- retour menu -->
     <button mat-fab extended color="primary">
@@ -21,7 +21,7 @@
     
      <!-- if connected -->
     <ng-template #elseBlock>
-        <button mat-fab extended color="primary">
+        <button mat-fab extended color="primary">   
             <mat-icon>groups</mat-icon>
                 Groupes
         </button>
