--- a/frontend/src/app/pages/authentication/inscription/inscription.component.scss
+++ b/frontend/src/app/pages/authentication/inscription/inscription.component.scss
@@ -1,3 +1,6 @@
+// @import "../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 section {
     padding: 30px;
 }
