--- a/frontend/src/app/pages/authentification/connexion/connexion.component.scss
+++ b/frontend/src/app/pages/authentification/connexion/connexion.component.scss
@@ -1,3 +1,7 @@
+//@import "../../../../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
 section {
     padding: 30px;
 }
