added connexion/deconnexion avec backend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <app-header></app-header>
 <div class="content mat-app-background darkMode">
-  <h1> Hello There{{!user ? "" : ", " + user.username}} </h1>
+  <h1> Hello There{{!user ? "" : ", " + user.email}} </h1>
 </div>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
