add proposition movie + footer stuck bottom + correction envirnment + ajout poster_path for movie

--- a/frontend/src/app/common/footer/footer.component.html
+++ b/frontend/src/app/common/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="accent">
+<mat-toolbar color="accent" class="footer">
     <mat-toolbar-row>
       <a mat-flat-button routerLink="/infos/presentation">Présentation du site</a>
       <a mat-flat-button routerLink="/infos/contacts">Contacts</a>
