--- a/frontend/src/app/functionalities/preferences/preferences.component.html
+++ b/frontend/src/app/functionalities/preferences/preferences.component.html
@@ -23,7 +23,7 @@
             </ul>
         </span>
 
-        <button mat-fab extended color="primary">
+        <button mat-fab extended color="primary" (click)="enregistrerPreferences()">
             <mat-icon>save</mat-icon>
             <span>Enregistrer</span>
         </button>
