create menu + updating preferences component to get user preferences

--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -26,7 +26,7 @@
                 Groupes
         </button>
         
-        <button mat-fab extended color="primary">
+        <button mat-fab extended color="primary" routerLink="/app/menu">
             <mat-icon>manage_accounts</mat-icon>
                 Compte
         </button>
