affichage terminé back et front relié

--- a/frontend/src/app/functionalities/menu/menu.component.html
+++ b/frontend/src/app/functionalities/menu/menu.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="2" rowHeight="3:1">
   <mat-grid-tile routerLink="/app/films-vus"><h2>Films Vus</h2></mat-grid-tile>
-  <mat-grid-tile routerLink="/app/films-vus"><h2>Mes Groupes</h2></mat-grid-tile>
+  <mat-grid-tile routerLink="/app/mes-groupes"><h2>Mes Groupes</h2></mat-grid-tile><!-- c'est pas film vu c'est groupes ici -->
   <mat-grid-tile routerLink="/app/preferences"><h2>Mes Préférences</h2></mat-grid-tile>
   <mat-grid-tile (click)="disconnect()"><h2>Déconnexion</h2></mat-grid-tile>
 </mat-grid-list>
