update movie class in front + add watched movie functionality

--- a/frontend/src/app/functionalities/movies/list-movies/list-movies.component.html
+++ b/frontend/src/app/functionalities/movies/list-movies/list-movies.component.html
@@ -36,7 +36,7 @@
             <div layout="row" class="right">
               <div class="example-button-container">
                 <!-- Ajouter aux films vu -->
-                <button mat-fab extended color="warn" (click)="addToFavorite(movie)">
+                <button mat-fab extended color="warn" (click)="addToWatched(movie)">
                       J'ai vu ! 
                 </button> 
                 <!-- Retirer de la liste-->
