--- a/frontend/src/app/functionalities/movies/propose-movie/propose-movie.component.html
+++ b/frontend/src/app/functionalities/movies/propose-movie/propose-movie.component.html
@@ -20,7 +20,7 @@
           </p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button> J'ai vu ! </button>
+          <button mat-button (click)="addToWatched()"> J'ai vu ! </button>
           <!-- <button mat-button (click)="removeFromList()">REMOVE</button> -->
         </mat-card-actions>
       </mat-card>    
