--- a/frontend/src/app/functionalities/movies/list-movies/list-movies.component.html
+++ b/frontend/src/app/functionalities/movies/list-movies/list-movies.component.html
@@ -2,7 +2,9 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Lord Of The Rings" #input>
 </mat-form-field>
- 
+<button color="primary"  mat-icon-button (click)="getNewBatch()">
+  <mat-icon>refresh</mat-icon>
+</button> 
 <table mat-table
        [dataSource]="listMoviesToDisplay" multiTemplateDataRows
        class="mat-elevation-z8">
