--- a/frontend/src/app/functionalities/movies/propose-movie/propose-movie.component.html
+++ b/frontend/src/app/functionalities/movies/propose-movie/propose-movie.component.html
@@ -1,10 +1,10 @@
 <div class="sub-div">
     <button mat-raised-button color="primary" routerLink="/app/list-movies">Accès Direct à la Liste</button>
-    <!-- <button color="primary"  mat-icon-button (click)="getNewBatch()">
+    <button color="primary"  mat-icon-button (click)="getNewBatch()">
         <mat-icon>refresh</mat-icon>
-    </button> -->
+    </button>
 </div>
-<div class="main-div" *ngIf="listMovies.length > 0 ; else elseBlock">
+<div class="main-div" *ngIf="listRecommendedMovies.length > 0 ; else elseBlock">
     <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" (click)="back()" [disabled]="!(indexSelectedMovie > 0)">
         <mat-icon>arrow_back_ios</mat-icon>
       </button>
@@ -21,10 +21,9 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-button (click)="addToWatched()"> J'ai vu ! </button>
-          <!-- <button mat-button (click)="removeFromList()">REMOVE</button> -->
         </mat-card-actions>
       </mat-card>    
-      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" (click)="next()" [disabled]="!(indexSelectedMovie < listMovies.length-1)">
+      <button mat-icon-button aria-label="Example icon button with a vertical three dot icon" (click)="next()" [disabled]="!(indexSelectedMovie < listRecommendedMovies.length-1)">
         <mat-icon>arrow_forward_ios</mat-icon>
       </button>
 </div>
@@ -32,9 +31,9 @@
     <div class="main-div">
         Aucun Film à proposer... <br>
         Raffraichissez la page en appuyant sur le bouton 
-        <!-- <button color="primary"  mat-icon-button (click)="getNewBatch()">
+        <button color="primary"  mat-icon-button (click)="getNewBatch()">
             <mat-icon>refresh</mat-icon>
-        </button> -->
+        </button>
     </div>
 </ng-template>
 
