isAdminGuard + header redirection

--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -33,7 +33,7 @@
 
         <!-- if admin -->
         <span *ngIf="isAdmin">
-            <button mat-fab extended color="primary">
+            <button mat-fab extended color="primary" routerLink="/app/admin-panel">
                 <mat-icon>admin_panel_settings</mat-icon>
                     Administration
             </button>
