--- a/frontend/src/app/functionalities/admin/admin-menu/admin-menu.component.html
+++ b/frontend/src/app/functionalities/admin/admin-menu/admin-menu.component.html
@@ -12,9 +12,9 @@
   <ng-container matColumnDef="expand">
     <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
     <td mat-cell *matCellDef="let user">
-        <button mat-fab extended color="warn">
+        <!-- <button mat-fab extended color="warn">
             Faire passer Admin ! 
-      </button>
+      </button> -->
     </td>
   </ng-container>
   <ng-container matColumnDef="expandedDetail">
