added gestion groupes en front

--- a/frontend/src/app/common/header/header.component.html
+++ b/frontend/src/app/common/header/header.component.html
@@ -21,7 +21,7 @@
     
      <!-- if connected -->
     <ng-template #elseBlock>
-        <button mat-fab extended color="primary">   
+        <button mat-fab extended color="primary" routerLink="/app/groups">   
             <mat-icon>groups</mat-icon>
                 Groupes
         </button>
